feat: paginate registry management APIs
